19
Improved Linux support.

18
Corrected bug in code reading RemoteWebcamSrv.txt.

17
Changed hard-coded default options.
Minor corrections.

16
Visual Studio 2008 project now uses OpenCV 2.4.9 (download http://www.ensta-bretagne.fr/lebars/Share/OpenCV2.4.9.zip and extract in C:).
Updated ReadMe.txt.

15
Added support of Kinect v2 in RemoteWebcamMultiSrv Visual Studio 2012 project.

14
Minor modifications.
Moved bWindowResizedFromServer in RemoteWebcamCli.txt.
Harmonization of RemoteWebcamCli w.r.t. Video in UxVCtrl.

13
Added bForceSoftwareResize, hscale, vscale parameters in place of scale for the server.

12
Added local video files support to the server.

11
Added rotation, scale and flip on the server side. Note that rotation, scale and flip as well as recording are supported by the client included in AROVTest but not dynamic resolution changes, for this client it is the contrary.

10
Added limited Android support (no video recording).

9
Added limited MJPEG support to the client.

8
Added optional video recording in RemoteWebcamMultiSrv.

7
Added RemoteWebcamMultiSrv.

6
Added MJPEG support to server (method 3).
Added encodetype parameter to enable PNG.

5
Added Visual Studio 2012 and OpenCV 2.4.9 support.
Added captureperiod parameter and harmonization of configuration files.
Added no compression method (2).
First attempt to add UDP support (does not work...).
Minor corrections.

4
Added Android-specific options.

3
Added DISABLE_GUI_REMOTEWEBCAMSRV option to improve compatibility with Android.

2
Update to take into account changes in OSUtils and to use OpenCV 2.4.2, and use of the static libraries in Release.

1
Initial version.