@@ -1,8 +1,6 @@
 % cli1address
 127.0.0.1
-%192.168.182.128
-%192.168.1.10
-%192.168.1.15
+%192.168.1.107
 % cli1port
 4014
 % videoimgwidth
