@@ -1,5 +1,8 @@
 % camid (0..9) or a video filename
 0
+%Kinect2Color
+%Kinect2Depth
+%Kinect2Infrared
 % srvport
 4014
 % videoimgwidth
@@ -14,11 +17,19 @@
 5
 % bForceSoftwareResize
 1
+% hcenter
+0
+% vcenter
+0
 % hscale
 1
 % vscale
 1
 % rotation angle (in deg)
+0
+% hshift
+0
+% vshift
 0
 % bFlip
 0
