@@ -29,9 +29,13 @@ int videoimgheight = 0;
 int captureperiod = 0;
 int timeout = 0;
 BOOL bForceSoftwareResize = FALSE;
+double hcenter = 0;
+double vcenter = 0;
 double hscale = 1;
 double vscale = 1;
 double angle = 0;
+double hshift = 0;
+double vshift = 0;
 int bFlip = FALSE;
 BOOL bUDP = FALSE;
 int pixcolorchgthreshold = 0; 
