@@ -36,9 +36,13 @@ EXTERN_C int videoimgheight;
 EXTERN_C int captureperiod;
 EXTERN_C int timeout;
 EXTERN_C BOOL bForceSoftwareResize;
+EXTERN_C double hcenter;
+EXTERN_C double vcenter;
 EXTERN_C double hscale;
 EXTERN_C double vscale;
 EXTERN_C double angle;
+EXTERN_C double hshift;
+EXTERN_C double vshift;
 EXTERN_C int bFlip;
 EXTERN_C BOOL bUDP;
 EXTERN_C int pixcolorchgthreshold; 
