@@ -14,11 +14,19 @@
 5
 % bForceSoftwareResize
 1
+% hcenter
+0
+% vcenter
+0
 % hscale
 1
 % vscale
 1
 % rotation angle (in deg)
+0
+% hshift
+0
+% vshift
 0
 % bFlip
 0
