@@ -1,3 +1,7 @@
+20
+Improved compatibility with OpenCV 3.1.0.
+Added hcenter, vcenter, hshift, vshift parameters in servers configuration files.
+
 19
 Improved Linux support.
 
